# demucs-rs

./: Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
demucs-cli/src/: progress.rs
demucs-core/: Cargo.toml
demucs-core/src/: lib.rs
demucs-wasm/: Cargo.toml  PERFORMANCE.md
demucs-wasm/src/: lib.rs
